# Includes PEP 561 py.typed marker for type checker support
[tool.poetry]
name = "mtjk"
version = "2.7.8.post3"
description = "Python API & client shell for talking to Meshtastic devices"
authors = ["Meshtastic Developers (upstream project authors)"]
maintainers = ["Jeremiah K. <jeremiahk@gmx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/jeremiah-k/mtjk"
repository = "https://github.com/jeremiah-k/mtjk"
packages = [{ include = "meshtastic" }]
include = [{ path = "meshtastic/py.typed", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.10,<3.15"
pyserial = "^3.5"
protobuf = ">=5.29.5"
typing-extensions = { version = ">=4.15.0", python = "<3.13" }
tabulate = "^0.10.0"
requests = "^2.33.0"
pyyaml = "^6.0.1"
# Keep pypubsub >=4.0.7 for PEP 561 `py.typed` metadata in strict type checking.
pypubsub = "^4.0.7"
bleak = "^3.0.1"
packaging = "^26.0"
argcomplete = { version = "^3.5.2", optional = true }
pyqrcode = { version = "^1.2.1", optional = true }
dotmap = { version = "^1.3.30", optional = true }
print-color = { version = "^0.4.6", optional = true }
dash = { version = "^4.0.0", optional = true }
pytap2 = { version = "^2.3.0", optional = true }
dash-bootstrap-components = { version = "^2.0.4", optional = true }
plotly = { version = "^6.6.0", optional = true }
pandas = { version = "^2.2.2", optional = true }
pandas-stubs = { version = "^2.3.3.260113", optional = true }
wcwidth = { version = "^0.7.0", optional = true }

[tool.poetry.group.dev.dependencies]
hypothesis = "6.155.1"
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-timeout = "2.4.0"
pdoc3 = "0.11.6"
autopep8 = "2.3.2"
pylint = "4.0.5"
pyinstaller = "6.20.0"
mypy = "2.1.0"
mypy-protobuf = "5.1.0"
types-protobuf = "^6.32.1.20250221"
types-tabulate = "^0.9.0.20241207"
types-requests = "^2.32.4.20260107"
types-setuptools = "^82.0.0.20260210"
types-pyyaml = "^6.0.12.20250915"
pyarrow-stubs = "^20.0.0.20251215"

[tool.poetry.group.powermon]
optional = true

[tool.poetry.group.powermon.dependencies]
riden = { git = "https://github.com/geeksville/riden.git#1.2.1" }
ppk2-api = "^0.9.2"
parse = "^1.20.2"
pyarrow = "^24.0.0"
platformdirs = "^4.2.2"

# If you are doing power analysis you might want these extra devtools
[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
jupyterlab = "^4.2.2"
matplotlib = "^3.9.0"
ipympl = "^0.10.0"
ipywidgets = "^8.1.3"
jupyterlab-widgets = "^3.0.11"

[tool.poetry.extras]
cli = ["pyqrcode", "print-color", "dotmap", "argcomplete", "wcwidth"]
tunnel = ["pytap2"]
analysis = [
  "dash",
  "dash-bootstrap-components",
  "plotly",
  "pandas",
  "pandas-stubs",
]

[tool.poetry.scripts]
meshtastic = "meshtastic.__main__:main"
mesh-tunnel = "meshtastic.__main__:tunnelMain [tunnel]"
mesh-analysis = "meshtastic.analysis.__main__:main [analysis]"

# "Poe the poet" (optional) provides an easy way of running non python tools inside the poetry virtualenv
# if you would like to use it run "pipx install poe"
# then you can do stuff like "poe code" to run vscode inside this environment
[tool.poe.tasks]
code = "code ."
juypter = "poetry run jupyter lab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
